--- a/refs.bib
+++ b/refs.bib
@@ -9,12 +9,9 @@
     author    = "Liang Heng, Daniel Chou, Grace Xingxin Gao",
     title     = "Reliable GPS-Based Timing for Power Systems: A Multi-Layered, Multi Receiver Architecture",
     journal   = "InsideGNSS",
-    %volume   = "",
-    %number   = "",
     pages    = "12",
     year      = "2014",
-    month    = "November/December",
-    %note     = ""
+    month    = "November/December"
 }
 
 @misc{GPSGOVSS,
@@ -70,17 +67,14 @@
 } 
 
 @article{YLJRNR,
-  author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui, Reynaldo Francisco Nuqui",
+  author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui and Reynaldo Francisco Nuqui",
   title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
-  %volume   = "",
-  %number   = "",
   year      = "2001",
-  month    = "July",
-  %note     = ""
+  month    = "July"
 }
 
 @misc{HP,
-  author = "Carl R. (Rod) Nave",
+  author = "Carl R. Nave",
   title = {HyperPhysics},
   howpublished = {\url{http://hyperphysics.phy-astr.gsu.edu/hbase/acloc.html}},
   note = {Accessed: 16-04-2015}
@@ -91,6 +85,12 @@
   howpublished = {\url{http://en.wikipedia.org/wiki/Caesium}},
   url = {http://commons.wikimedia.org/wiki/User:Dnn87#/media/File:CsCrystals1.JPG},
   note = {Licenced under CC BY-SA 3.0 \url{http://creativecommons.org/licenses/by-sa/3.0/}}
+}
+
+@article{EVPMUGA,
+  author = "Daniel P. Shepard and Todd E. Humphreys and Aaron A. Fansler",
+  title = "Evaluation of the Vulnerability of Phasor Measurement Units to GPS Spoofing Attacks",
+  year = 2012
 }
 
 
