Filled in on PMUs

--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -84,8 +84,11 @@ What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They bo
 This property is a result of how they track time. In essence, all clocks work the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is quartz crystal powered by a battery. The frequency of which the crystal oscillations is then divided down to a single Hertz by simple electronics.The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. 
 Although a completely different beast, the same principles apply to the atomic clock which uses the uses the microwave signal that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}. This is of course an extremely limited explanation, but for this essay, it will have to suffice.
 
-\subsection{GPS and Time}
-During the introduction of this article the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there is an atomic clock. These clocks are synchronized with each other and also with clocks on the earth. Even though the use of GPS as a way to obtain correct time was not among the original design goals, it has proven useful for time critical applications. FILL INN ABOUT HOW GPS AND TIME WORKS! An example of such an application is a phasor measurement unit (PMU).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is obtained by using GPS. \cite{YLJRNR}
+\section{GPS and Time}
+During the introduction of this article the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there is an atomic clock. These clocks are synchronized with each other and also with clocks on the earth. Even though the use of GPS as a way to obtain correct time was not among the original design goals, it has proven useful for time critical applications. FILL INN ABOUT HOW GPS AND TIME WORKS!
+
+\section{Phasor Measurement Units}
+An example of such an application relying on GPS derived time is a phasor measurement unit (PMU).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is obtained by using GPS. \cite{YLJRNR} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere. In some cases, this can lead to blackouts \cite{EVPMUGA}.
 
 \section{Interfering with Signals}
 By emitting a high-power signal at the GPS frequency, one can interfere with the signals emitted by the GPS satellites, effectively denying GPS receivers use of these signals. These signals are already weak considering their travel from space. Such an "attack", although effective, is pretty naive and easily recognized by the jammed party. After all, if you don't have a signal, you are probably being jammed. A more sophisticated approach is to emit a counterfeit signal in order to manipulate the receivers reported time or even position. This approach is known as \textit{spoofing} and is a lot harder to detect. 
