--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -33,7 +33,7 @@
   stringstyle=\color{mymauve},     % string literal style
 }
 
-\title{GPS Spoofing and the importance of time}
+\title{GPS spoofing and time}
 \author{Aril Johannes Schultzen}
 
 \begin{document}
@@ -81,21 +81,19 @@ What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They bo
   \caption[Caesium campule]
    {High pure Caesium crystals in ampule under argon. Source: \cite{DENCES}}
 \end{wrapfigure} 
-This property is a result of how they track time. In essence, all clocks work the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is quartz crystal powered by a battery. The frequency of which the crystal oscillations is then divided down to a single Hertz by simple electronics.The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. 
-Although a completely different beast, the same principles apply to the atomic clock which uses the uses the microwave signal that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}. This is of course an extremely limited explanation, but for this essay, it will have to suffice.
-
+This property is a result of how they track time. In essence, all clocks work in the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is a quartz crystal powered by a battery. The frequency of which the crystal oscillates is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. 
+Although a completely different beast, the same principles apply to the atomic clock which uses the microwave signal that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}. Bear in mind that this is of course an extremely limited explanation.
 \section{GPS and Time}
-During the introduction of this article the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there is an atomic clock. These clocks are synchronized with each other and also with clocks on the earth. Even though the use of GPS as a way to obtain correct time was not among the original design goals, it has proven useful for time critical applications. FILL INN ABOUT HOW GPS AND TIME WORKS!
+During the introduction of this essay the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there is an atomic clock. The clocks are synchronized with each other and also with clocks on Earth. Even though the use of GPS as a way to obtain correct time was not among the original design goals, it has proven useful for time critical applications. \iffalse FILL INN ABOUT HOW GPS AND TIME WORKS! \fi
 
 \section{Phasor Measurement Units}
-An example of such an application relying on GPS derived time is a phasor measurement unit (PMU).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is obtained by using GPS. \cite{YLJRNR} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere. In some cases, this can lead to blackouts \cite{EVPMUGA}.
+An example of an application relying on GPS derived time is a phasor measurement unit (PMU).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is obtained by using GPS. \cite{YLJRNR} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere and in some cases lead to whole spread blackouts \cite{EVPMUGA}.
 
 \section{Interfering with Signals}
-By emitting a high-power signal at the GPS frequency, one can interfere with the signals emitted by the GPS satellites, effectively denying GPS receivers use of these signals. These signals are already weak considering their travel from space. Such an "attack", although effective, is pretty naive and easily recognized by the jammed party. After all, if you don't have a signal, you are probably being jammed. A more sophisticated approach is to emit a counterfeit signal in order to manipulate the receivers reported time or even position. This approach is known as \textit{spoofing} and is a lot harder to detect. 
+By emitting a high-power signal at the frequencies used by GPS satellites, one can interfere with the signals received by the GPS receiver, effectively denying GPS receivers use of these signals. These signals are already weak considering their travel from space. Such an "attack", although effective, is pretty naive and easily recognized by the jammed party. After all, if you don't have a signal, you are probably being jammed. A more sophisticated approach is to emit a counterfeit signal in order to manipulate the receivers reported time or even position. This approach is known as \textit{spoofing} and is a lot harder to detect. 
 
 \subsection{Spoofing}
-When spoofing a GPS signal, a false version of the original signal is made in order to gain control over the victims GPS receiver calculated position and time. Knowing the signal that the victim is receiving is key in order to successfully spoof it. To anyone with access to the military-grade GPS signals, this is not necessarily much of an issue. Their signals are encrypted and hard to spoof, the civilian frequencies on the other hand are publicly known and readily predictable. Daniel P. Shepard and Todd E. Humphreys and Aaron A. Fansler (2012)\cite{EVPMUGA} describes in their paper \textit{Evaluation of the Vulnerability of Phasor Measurement Units to GPS Spoofing Attacks}, a way to successfully spoof a GPS signal used by a PMU. They describe a spoofer that they constructed that is able to mix authentic signals from GPS satellites with their own counterfeit signals. They also describe how they "introduce" the counterfeit signal to the victim by adjusting the power of the signal below the victim receivers noise floor and then gradually raises it until it surpasses the authentic signal signal strength. By using this strategy, they were able to spoof a variety of receivers with great success. 
-
+When spoofing a GPS signal, a false version of the authentic signal is made in order to gain control over the victims GPS receiver calculated position and time. Knowing the signal that the victim is receiving is key in order to successfully spoof it. To anyone with access to the military-grade GPS signals, this is not necessarily much of an issue. Their signals are encrypted and hard to spoof, the civilian frequencies on the other hand are publicly known and readily predictable. Shepard, Humphreys and Fansler (2012)\cite{EVPMUGA} describes in their paper \textit{Evaluation of the Vulnerability of Phasor Measurement Units to GPS Spoofing Attacks}, a way to successfully spoof a GPS signal used by a PMU. They describe a spoofer that they constructed that is able to mix authentic signals from GPS satellites with their own counterfeit signals. They also describe how they "introduce" the counterfeit signal to the victim by adjusting the power of the signal below the victim receivers noise floor and then gradually raises it until it surpasses the authentic signals strength. By using this strategy, they were able to spoof a variety of receivers with great success. 
 \newpage
 \printbibliography[title={Complete Bibliography},heading=bibintoc]
 
