--- a/refs.bib
+++ b/refs.bib
@@ -93,6 +93,13 @@
   year = 2012
 }
 
+@article{SGRCOOPMU,
+  author = "Xichen Jiang",
+  title = "SPOOFING GPS RECEIVER CLOCK OFFSET OF PHASOR MEASUREMENT UNITS",
+  url = {http://tcipg.org/sites/default/files/papers/2012_Q2_CPR2.pdf},
+  year = 2012
+}
+
 
 
   
